# rtvg

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  package-lock.json  package.json  tasklist.txt
examples/: Cargo.toml
examples/src/: lib.rs
examples/src/modules/: base.rs  display.rs  mod.rs
include/radx/: radx_buffer.hpp  radx_implement.inl
include/rtvg/: core.hpp  instance.hpp
prebuilt/intrusive/amdgpu/rtrace/: handle.rchit.spv
prebuilt/intrusive/intel/rtrace/: bgfill.rmiss.spv  rtrace.rgen.spv
prebuilt/intrusive/nvidia/render/: render.frag.spv
prebuilt/intrusive/turing/render/: render.frag.spv
prebuilt/intrusive/turing/rtrace/: rtrace.rgen.spv
renderer/: core.mjs  device.mjs  utils.js  utils.mjs
rtvg/: Cargo.toml
rtvg/src/: lib.rs
rtvg/src/lib/: helpers.rs
rtvg/src/modules/: mod.rs
shaders-sdk/render/: render.frag
shaders-sdk/rtrace/: bgfill.rmiss  rtrace.rgen
src/base/: appBase.hpp  appRenderer.hpp  appStructures.hpp  appUtils.hpp
src/examples/: main.cpp  rtvg.cpp
