[package]
name = "examples"
version = "0.1.0"
authors = ["elv.h <elviras9t@gmail.com>"]
edition = "2018"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.4", features = ["windef", "winuser"] }

[dependencies]
ferris-says = "0.1"
winit = "0.19"
vulkano = "0.11"
vulkano-win = "0.11"
vk-mem = "0.1.6"
lyon = "0.13.1"
ash = "0.28.0"
